# dmstools

./: .gitignore  AUTHORS  COPYING  ChangeLog  Doxyfile  Makefile-xcode  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  dmstools.tags  syzdek-coding.tags
SyzdekCodingTools.xcodeproj/: project.pbxproj  syzdek.mode1v3  syzdek.pbxuser
build-aux/: .gitignore  Makefile-xcode  dmstools.tags  environment.sh  git-tar-name.txt  projreconf.sh
dmstools.xcodeproj/: project.pbxproj
doc/: Doxyfile  bindump.1.in  bitops.1.in  codetagger.1.in  macaddrinfo.1.in  numconvert.1.in  posixregex.1.in
examples/: Makefile  example-c.tags  example-defaults.tags  example-html.tags  example-space.tags  example.c  example.html  example.spc  example.txt
include/: dms.h  dmsversion.h.in
lib/: libdms.h  libdms.sym  libdms_version.c  libdms_version.h
m4/: .gitignore  dmstools_gcc.m4
po/: .gitignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  dmstools.pot  en_US.po
src/: .gitignore  Makefile  bindump.c  bindump.mak  bitcopy.c  bitcopy.mak  bitops.c  bitops.mak  codetagger.c  codetagger.mak  colors.c  colors.mak  common.h  dmsversion.c  endian.c  endian.mak  getpkg  macaddrinfo.c  macaddrinfo.mak  macaddrutil.c  macaddrutil.mak  netcalc.c  netcalc.mak  numconvert.c  numconvert.mak  posixregex.c  posixregex.mak  recurse.c  recurse.mak  size.c  suicide.c  suicide.mak  typedef-info.c  typedef-info.mak  typedef-sizes.c  typedef-sizes.mak  urldesc.c  urlencoding.c  vaportar.c
